# koompi-os-system-settings

./: README.md  SystemSettings.mm
SystemSettings/: CMakeLists.txt  CMakeLists.txt.user.801ccdf  main.cpp  resource.qrc  systemsettings.cpp  systemsettings.h  templatelayout.cpp  templatelayout.h
SystemSettings/application/: application.cpp  application.h
SystemSettings/datetime/: datetime.cpp  datetime.h
SystemSettings/display/: display.cpp  display.h
SystemSettings/hardware/: hardware.cpp  hardware.h
SystemSettings/keyboard/: keyboard.cpp  keyboard.h
SystemSettings/mouse/: mouse.cpp  mouse.h
SystemSettings/network/: network.cpp  network.h
SystemSettings/power/: power.cpp  power.h
SystemSettings/resource/styles/: style.css  style.qss
SystemSettings/sound/: sound.cpp  sound.h
SystemSettings/theme/: theme.cpp  theme.h
SystemSettings/update/: update.cpp  update.h
SystemSettings/user/: user.cpp  user.h
build-SystemSettings-Desktop-Debug/: SystemSettings  SystemSettings.cbp
build-SystemSettings-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-65359cefd32f5c798f60.json  cmakeFiles-v1-7bd446bcb06149040a7d.json  codemodel-v2-4e9459d5def5ab89c29a.json  index-2020-01-30T03-46-03-0258.json  target-SystemSettings-Debug-ef1b5ba6a7965c45547a.json  target-SystemSettings_autogen-Debug-4d3f42c9869bad6db675.json
build-SystemSettings-Desktop-Debug/SystemSettings_autogen/: mocs_compilation.cpp
build-SystemSettings-Desktop-Debug/SystemSettings_autogen/EWIEGA46WW/: moc_systemsettings.cpp  qrc_resource.cpp
